# Kinux-Kernel

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  error.h  idt.h  irq.c  panic.c
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: greetings.yml  shiftleft-analysis.yml  stale.yml
docs/: CREATE_YOUR_OWN_OS.md
drivers/keyboard/: keyboard.c  keyboard.h
drivers/ports/: ports.c  ports.h
drivers/timer/: timer.c  timer.h
drivers/video/vga/: vga.c  vga.h
fs/: create
fs/echfs/: echfs.c  echfs.h
include/: gdt.h  idt.h  irq.h  isr.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
include/kinux/: error.h  io.h  kernel.h  ports.h
include/sys/: types.h
init/: init.c
kernel/: gdt.c  gdt.h  idt.c  idt.h  irq.c  irq.h  isr.c  isr.h  panic.c
lib/libc/errno/: errno.c
lib/libc/string/: strcmp.c
